# Telegram-Video-Downloader

./: .gitignore  Cargo.toml  README.md  config.example.toml  pyproject.toml
.github/workflows/: codex-review-gate.yml
docs/: PROJECT_STATE.md  PROJECT_TODO.md
docs/project_journal/2026/05/: 2026-05-16-telegram-local-downloader-8f3c2a.md
docs/project_journal/2026/06/: 2026-06-18-bbdown-rust-migration-bbd04f.md
scripts/: launch_agent.sh  pdf_helper.py
src/: bilibili_auth.rs  bilibili_core.rs  config.rs  downloader.rs  main.rs  router.rs  telegram.rs
tests/: test_pdf_helper.py
