[package]
name = "telegram-video-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
libc = "0.2"
qrcode = "0.14.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
