[package]
name = "telegram-video-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bbdown-core = { git = "https://github.com/Joey-Project/BBDown-rust", rev = "832c54b28449c96b77ee190f1805ae801dfd1c76", package = "bbdown-core" }
image = { version = "0.25.10", default-features = false, features = ["png"] }
libc = "0.2"
qrcode = "0.14.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
