[project]
name = "telegram-local-downloader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.52.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
